# rust-typescript-postgres-template

./: Dockerfile  README.md  init-project.sh  postgres.sh  run-local.sh
.github/workflows/: client.yaml  deploy.yaml  server.yaml  test.yaml
server/: Cargo.toml
server/src/: database.rs  main.rs
server/src/routes/: healthz.rs  mod.rs
